--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -5,6 +5,12 @@ p
   color: #8d8d8d
   line-height: 18px
   letter-spacing: .4px
+  text-align: justify
+  margin-bottom: 0
+.small
+  height: auto
+.big
+  height: 50px
 .sc
   width: 525px
   height: auto
@@ -32,13 +38,17 @@ p
       right: 0
       transform: translate(0, -50%)
       cursor: pointer
+      padding: 5px
+      &:hover span
+        background-color: #464b51
       span
         height: 8px
         width: 8px
         display: block
-        background-color: #464b51
+        background-color: #eff1f3
         margin-left: 2px
         cursor: pointer
+        transition: 300ms linear all
     &__options-box
       width: 150px
       height: auto
@@ -58,29 +68,61 @@ p
     &__read-more
       cursor: pointer
       float: right
+      p
+        margin-top: 22px
+        margin-bottom: 23px
+        background: #f7cfab
+        padding: 6px 17px
+        color: #fff
+        position: relative
+        border-radius: 20px
+        overflow: hidden
+        &:hover
+          background: #c9a88b
+          transition: 400ms linear all
+          &:before
+            content: ''
+            left: 100%
+        &:before
+          content: ''
+          position: absolute
+          height: 230%
+          width: 21px
+          background: #c9a88b
+          top: calc(50% + 17%)
+          left: -65px
+          transition: 200ms linear all
+          transform: rotate(29deg) translate(-50% , -50%)
     &__content
       overflow: hidden
       display: inline-block
       position: relative
-      transition: 400ms linear all
+      transition: height 400ms linear
     &__thumbnail
       img
         position: relative
-        width: calc(100% + 10%)
+        width: calc(100% + 10.5%)
         left: 50%
+        -webkit-transform: translate(-50%, 0)
         transform: translate(-50%, 0)
+        border-top-left-radius: 15px
+        border-top-right-radius: 15px
     &__meta
       position: relative
-      width: calc(100% + 10%)
+      width: calc(100% + 10.5%)
       left: 50%
+      border-bottom-right-radius: 15px
+      border-bottom-left-radius: 15px
+      -webkit-transform: translate(-50%, 0)
       transform: translate(-50%, 0)
-      background-color: #f3f6f8
+      background-color: #AAD9F7
+      color: #fff
       &__title
-        color: #40404f
         font-size: 16px
         font-weight: 500
         padding: 0 10px 0 0
         vertical-align: middle
+        letter-spacing: 0.4px
       &__likes_count
         div
           display: inline
@@ -88,7 +130,7 @@ p
         padding: 10px 25px
     &__comment
       &__content
-        background-color: #eff1f3
+        background-color: #E7F4FD
         border-radius: 8px
         img
           width: 30px
@@ -97,32 +139,75 @@ p
         &__text
           p
             line-height: 15px
-            margin-left: 5px
+            padding: 5px 10px 18px 10px
           span
             font-size: 14px
             font-weight: 600
       &__input
+        font-size: 13px
         textarea
           width: 100%
+          outline: 0
+          color: #40404d
+          border: 2px solid #aad9f7
           border-radius: 8px
+          padding-left: 8px
+          padding-top: 4px
+        input
+          border-top: none
+          border-left: none
+          border-right: none
+          border-bottom: 2px solid #aad9f7
+          outline: 0
+          line-height: 30px
+          color: #40404d
+          padding-left: 8px
         button
           font-size: 13px
+          margin-top: 6px
+          font-weight: 600
+          float: right
+          background-color: #aad9f7
+          border: none
+          border-radius: 13px
   &__footer
-    border-top: 1px solid #8d8d8d
-    margin-bottom: 100px
-    span
-      position: relative
-      cursor: pointer
-      margin-top: 10px
-      &:last-of-type
-        img
-          left: -25px
-          top: calc(50% + 1%)
-          transform: translate(0, -50%)
-    img
+    margin-bottom: 0
+    position: relative
+    padding-top: 15px
+    margin-top: 25px
+    &:before
+      content: ''
+      background-color: #aad9f7
+      top: 0
+      width: 50%
+      height: 1px
       position: absolute
-      top: calc(50% + -8%)
-      transform: translate(0, -50%)
-      width: 16px
-      height: 16px
-      margin-left: 4px
+      left: 50%
+      transform: translate(-50% , 0)
+      animation: playfulBorder 4s infinite linear
+      @keyframes playfulBorder
+        0%
+          width: 50%
+        50%
+          width: 100%
+          background-color: rgba(239, 241, 243, 0.38)
+        100%
+          width: 50%
+    span
+      cursor: pointer
+      display: flex
+      align-items: center
+      padding: 5px 10px
+      img
+        width: 18px
+        height: 18px
+        &:first-of-type
+          margin-left: 5px
+        &:last-of-type
+          margin-right: 5px
+      &:last-of-type
+        display: flex
+        flex-direction: row-reverse
+      &:hover
+        background-color: #f6f6ff
+        border-radius: 13px
